virtualservice-kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "kiali.internal"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
